--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -5,6 +5,6 @@ db.username=root
 db.password=123456789
 
 # Hibernate properties
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create
 
